Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8015

Replication of operation failed(-22): 2885 HLINK (3)

XMLWordPrintable

    • 3
    • 9223372036854775807

      I had a directory that contained two files (one is a hardlink of another):

      # ls -il /hardlink/
      total 120
      163865 -rwxr-xr-x 2 root root 53400 Nov 11  2010 ed
      163865 -rwxr-xr-x 2 root root 53400 Nov 11  2010 red
      

      After copying the directory to a Lustre filesystem:

      cp -a /hardlink /mnt/lustre/
      

      Running lustre_rsync hit the following errors:

      # lustre_rsync --source=/mnt/lustre/ --target=/mnt/backup/ --mdt=lustre-MDT0000 --user=cl1 --statuslog lustre_rsync.log --verbose
      Lustre filesystem: lustre
      MDT device: lustre-MDT0000
      Source: /mnt/lustre/
      Target: /mnt/backup/
      Statuslog: lustre_rsync.log
      Changelog registration: cl1
      Starting changelog record: 0
      Replication of operation failed(-22): 5 HLINK (3) [0x200000401:0x6e2:0x0] [0x200000401:0x6e1:0x0] ed
      Replication of operation failed(-21): 6 SATTR (14) [0x200000401:0x6e1:0x0] [0x200000401:0x6e1:0x0] 
      Errors: 2
      lustre_rsync took 0 seconds
      Changelog records consumed: 7
      

      The type of the target filesystem /mnt/backup/ is ext4.

            yujian Jian Yu
            yujian Jian Yu
            Votes:
            1 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved: