LU-8015 utils: fix lr_link() to get correct src and dest

The current codes in lr_link() of lustre_rsync.c can not
find out the correct info->src and info->dest in the
following situations:
1) the source name ends with the destination name
2) the file has two links with the same name but
   in different directories

This patch fixes the above issue by using the path of the
parent FID and target name to construct info->dest, and
comparing the path of the target FID with info->dest to
get the correct info->src.

Test-Parameters: testlist=lustre-rsync-test
Signed-off-by: Jian Yu <jian.yu@intel.com>
Change-Id: Ia92b01c069bde01bd0f094017bd2502292afc7f8
Reviewed-on: http://review.whamcloud.com/19599
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: John L. Hammond <john.hammond@intel.com>
Reviewed-by: Jinshan Xiong <jinshan.xiong@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>